tests/baselines/reference/importTypeAttributesNonString.errors.txt
mod.mts(1,16): error TS2664: Invalid module name in augmentation, module 'wat' cannot be found.
mod.mts(4,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(13,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(18,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(23,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(28,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(33,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(38,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(43,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(48,25): error TS2307: Cannot find module 'wat' or its corresponding type declarations.
mod.mts(53,26): error TS2307: Cannot find module 'wat' or its corresponding type declarations.


==== mod.mts (11 errors) ====
    declare module "wat";
                   ~~~~~
!!! error TS2664: Invalid module name in augmentation, module 'wat' cannot be found.
    
    // Import type with function expression (should error)
    type T1 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: {
        a: (() => {
          console.log("why can you write js here????");
        })(),
      }
    });
    
    // Import type with number literal (should error)
    type T2 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: { field: 0 }
    });
    
    // Import type with template literal (should error)
    type T3 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: { field: `a` }
    });
    
    // Import type with regex (should error)
    type T4 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: { field: /a/g }
    });
    
    // Import type with array (should error)
    type T5 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: { field: ["a"] }
    });
    
    // Import type with object (should error)
    type T6 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: { field: { a: 0 } }
    });
    
    // Import type with method call (should error)
    type T7 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: { field: 0..toString() }
    });
    
    // Import type with valid string literal (should work)
    type T8 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      assert: { type: "json" }
    });
    
    // Import type with 'with' keyword and valid string (should work)
    type T9 = typeof import("wat", {
                            ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      with: { type: "json" }
    });
    
    // Import type with 'with' keyword and invalid expression (should error)
    type T10 = typeof import("wat", {
                             ~~~~~
!!! error TS2307: Cannot find module 'wat' or its corresponding type declarations.
      with: { field: 123 }
    });
    